<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/h_back"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_centerInParent="true"
                android:src="@drawable/white_circle" />

            <ImageView
                android:id="@+id/h_head"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:textSize="20sp"
                android:layout_alignBottom="@id/h_back"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/account_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                app:srcCompat="@drawable/ic_person_outline_black_24dp" />

            <TextView
                android:id="@+id/account_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/account_management"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:text=">"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="20dp" />

        <!--<LinearLayout-->
            <!--android:id="@+id/grade"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginVertical="9dp">-->

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginHorizontal="20dp"-->
                <!--app:srcCompat="@drawable/ic_star_black_24dp" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/grade"-->
                <!--android:textSize="18sp" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginRight="20dp"-->
                <!--android:text=">"-->
                <!--android:textSize="24sp" />-->
        <!--</LinearLayout>-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/grey"-->
            <!--android:layout_marginHorizontal="20dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:id="@+id/process">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_description_black_24dp"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/me_story"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/process"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:text=">" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingVertical="10dp"
            android:paddingLeft="10dp"
            android:text="@string/others"
            android:textColor="@color/gray1"
            android:textSize="18sp" />


        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                app:srcCompat="@drawable/ic_create_black_24dp" />

            <TextView
                android:id="@+id/fb_feedback"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/feedback"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:text=">"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:id="@+id/about">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_info_outline_black_24dp"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/about_us"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/about"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:text=">" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="9dp"
            android:id="@+id/clear">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_delete_black_24dp"
                android:layout_marginHorizontal="20dp" />

            <TextView
                android:id="@+id/cache"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/clear"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:layout_marginRight="20dp"
                android:text=">" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginHorizontal="20dp" />
    </LinearLayout>
</ScrollView>